--- a/POOG1/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
+++ b/POOG1/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0"
-      prefWidth="836.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.sistemaventas.controlador.HelloController">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="857.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistemaventas.controlador.HelloController">
     <children>
-        <TitledPane animated="false" prefHeight="469.0" prefWidth="790.0" text="CATEGORIA">
+        <TitledPane animated="false" text="untitled">
             <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="317.0" prefWidth="855.0" style="-fx-background-color: #D95F14;">
                     <children>
-                        <Label layoutX="47.0" layoutY="38.0" prefHeight="17.0" prefWidth="96.0" text="CÓDIGO"/>
-                        <Label layoutX="47.0" layoutY="90.0" prefHeight="17.0" prefWidth="96.0" text="NOMBRE"/>
-                        <Label layoutX="47.0" layoutY="146.0" prefHeight="17.0" prefWidth="96.0" text="DESCRIPCIÓN"/>
-                        <TextField fx:id="codigoText" layoutX="186.0" layoutY="34.0"/>
-                        <TextField fx:id="nombreText" layoutX="186.0" layoutY="86.0"/>
-                        <TextField fx:id="descripcionText" layoutX="186.0" layoutY="151.0"/>
-                        <Button layoutX="402.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0"
-                                prefWidth="177.0" text="Guardar" onAction="#onInsertarButtonClick"/>
-                        <Button layoutX="402.0" layoutY="95.0" mnemonicParsing="false" prefHeight="25.0"
-                                prefWidth="177.0" text="Limpiar" onAction="#onLimpiarButtonClick"/>
+                        <Label layoutX="64.0" layoutY="41.0" prefHeight="17.0" prefWidth="103.0" text="CÓDIGO" />
+                        <Label layoutX="64.0" layoutY="86.0" prefHeight="17.0" prefWidth="103.0" text="NOMBRE" />
+                        <Label layoutX="64.0" layoutY="135.0" prefHeight="17.0" prefWidth="103.0" text="DESCRIPCIÓN" />
+                        <TextField fx:id="codigoText" layoutX="188.0" layoutY="37.0" />
+                        <TextField fx:id="nombreText" layoutX="188.0" layoutY="82.0" />
+                        <TextField fx:id="descripcionText" layoutX="188.0" layoutY="131.0" />
+                        <Button layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font></Button>
+                        <Button layoutX="443.0" layoutY="82.0" mnemonicParsing="false" onAction="#onLimpiarButtonClick" prefHeight="25.0" prefWidth="164.0" text="LIMPIAR" />
                     </children>
                 </AnchorPane>
             </content>
         </TitledPane>
-        <TableView fx:id="tablaCategorias" prefHeight="437.0" prefWidth="902.0">
+        <TableView fx:id="tablaCategorias" prefHeight="241.0" prefWidth="857.0">
             <columns>
-                <TableColumn fx:id="colId" prefWidth="20.0" text="ID"/>
-                <TableColumn fx:id="colCodigo" prefWidth="75.0" text="CÓDIGO"/>
-                <TableColumn fx:id="colNombre" prefWidth="194.0" text="NOMBRE"/>
-                <TableColumn fx:id="colDescripcion" prefWidth="238.0" text="DESCRIPCIÓN"/>
-                <TableColumn fx:id="colFechaCreacion" prefWidth="219.0" text="FECHA CREACIÓN"/>
+                <TableColumn fx:id="colCodigo" prefWidth="117.0" text="CÓDIGO" />
+                <TableColumn fx:id="colNombre" prefWidth="247.0" text="NOMBRE" />
+                <TableColumn fx:id="colDescripcion" prefWidth="189.0" text="DESCRIPCION" />
+                <TableColumn fx:id="colFechaCreacion" prefWidth="215.0" text="FECHA CREACIÓN" />
             </columns>
         </TableView>
     </children>
