--- a/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
+++ b/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.sistemaventas.controlador.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-    <Button text="Guardar!" onAction="#onInsertarButtonClick"/>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="857.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistemaventas.controlador.HelloController">
+    <children>
+        <TitledPane animated="false" text="untitled">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="317.0" prefWidth="855.0" style="-fx-background-color: #D95F14;">
+                    <children>
+                        <Label layoutX="64.0" layoutY="41.0" prefHeight="17.0" prefWidth="103.0" text="CÓDIGO" />
+                        <Label layoutX="64.0" layoutY="86.0" prefHeight="17.0" prefWidth="103.0" text="NOMBRE" />
+                        <Label layoutX="64.0" layoutY="135.0" prefHeight="17.0" prefWidth="103.0" text="DESCRIPCIÓN" />
+                        <TextField fx:id="codigoText" layoutX="188.0" layoutY="37.0" />
+                        <TextField fx:id="nombreText" layoutX="188.0" layoutY="82.0" />
+                        <TextField fx:id="descripcionText" layoutX="188.0" layoutY="131.0" />
+                        <Button layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font></Button>
+                        <Button layoutX="443.0" layoutY="82.0" mnemonicParsing="false" onAction="#onLimpiarButtonClick" prefHeight="25.0" prefWidth="164.0" text="LIMPIAR" />
+                    </children>
+                </AnchorPane>
+            </content>
+        </TitledPane>
+        <TableView fx:id="tablaCategorias" prefHeight="241.0" prefWidth="857.0">
+            <columns>
+                <TableColumn fx:id="colCodigo" prefWidth="117.0" text="CÓDIGO" />
+                <TableColumn fx:id="colNombre" prefWidth="247.0" text="NOMBRE" />
+                <TableColumn fx:id="colDescripcion" prefWidth="189.0" text="DESCRIPCION" />
+                <TableColumn fx:id="colFechaCreacion" prefWidth="215.0" text="FECHA CREACIÓN" />
+            </columns>
+        </TableView>
+    </children>
 </VBox>
