--- a/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
+++ b/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
@@ -19,11 +19,13 @@
                         <TextField fx:id="codigoText" layoutX="188.0" layoutY="37.0" />
                         <TextField fx:id="nombreText" layoutX="188.0" layoutY="82.0" />
                         <TextField fx:id="descripcionText" layoutX="188.0" layoutY="131.0" />
-                        <Button layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa">
+                        <Button layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa" fx:id="guardarBtn">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font></Button>
                         <Button layoutX="443.0" layoutY="82.0" mnemonicParsing="false" onAction="#onLimpiarButtonClick" prefHeight="25.0" prefWidth="164.0" text="LIMPIAR" />
+                  <Button layoutX="443.0" layoutY="131.0" mnemonicParsing="false" onAction="#onSeleccionarButtonClick" prefHeight="25.0" prefWidth="164.0" text="EDITAR"/>
+                  <Button layoutX="443.0" layoutY="175.0" mnemonicParsing="false" onAction="#eliminarButtonClick" prefHeight="25.0" prefWidth="164.0" text="ELIMINAR" />
                     </children>
                 </AnchorPane>
             </content>
