--- a/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
+++ b/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/hello-view.fxml
@@ -19,18 +19,18 @@
                         <TextField fx:id="codigoText" layoutX="188.0" layoutY="37.0" />
                         <TextField fx:id="nombreText" layoutX="188.0" layoutY="82.0" />
                         <TextField fx:id="descripcionText" layoutX="188.0" layoutY="131.0" />
-                        <Button layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa" fx:id="guardarBtn">
+                        <Button fx:id="guardarBtn" layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font></Button>
                         <Button layoutX="443.0" layoutY="82.0" mnemonicParsing="false" onAction="#onLimpiarButtonClick" prefHeight="25.0" prefWidth="164.0" text="LIMPIAR" />
-                  <Button layoutX="443.0" layoutY="131.0" mnemonicParsing="false" onAction="#onSeleccionarButtonClick" prefHeight="25.0" prefWidth="164.0" text="EDITAR"/>
+                  <Button layoutX="443.0" layoutY="131.0" mnemonicParsing="false" onAction="#onSeleccionarButtonClick" prefHeight="25.0" prefWidth="164.0" text="EDITAR" />
                   <Button layoutX="443.0" layoutY="175.0" mnemonicParsing="false" onAction="#eliminarButtonClick" prefHeight="25.0" prefWidth="164.0" text="ELIMINAR" />
                     </children>
                 </AnchorPane>
             </content>
         </TitledPane>
-        <TableView fx:id="tablaCategorias" prefHeight="241.0" prefWidth="857.0">
+        <TableView fx:id="tablaCategorias">
             <columns>
                 <TableColumn fx:id="colCodigo" prefWidth="117.0" text="CÓDIGO" />
                 <TableColumn fx:id="colNombre" prefWidth="247.0" text="NOMBRE" />
