--- a/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/producto-view.fxml
+++ b/POOG2/sistemaVentas/src/main/resources/com/example/sistemaventas/producto-view.fxml
@@ -1,49 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="857.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistemaventas.controlador.ProductoController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0"
+      prefWidth="857.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.sistemaventas.controlador.ProductoController">
     <children>
         <TitledPane animated="false" text="untitled">
             <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="317.0" prefWidth="855.0" style="-fx-background-color: #D95F14;">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="317.0" prefWidth="855.0"
+                            style="-fx-background-color: #D95F14;">
                     <children>
-                        <Label layoutX="64.0" layoutY="41.0" prefHeight="17.0" prefWidth="103.0" text="CÓDIGO" />
-                        <Label layoutX="64.0" layoutY="86.0" prefHeight="17.0" prefWidth="103.0" text="NOMBRE" />
-                        <Label layoutX="64.0" layoutY="135.0" prefHeight="17.0" prefWidth="103.0" text="DESCRIPCIÓN" />
-                        <TextField fx:id="codigoText" layoutX="188.0" layoutY="37.0" />
-                        <TextField fx:id="nombreText" layoutX="188.0" layoutY="82.0" />
-                        <TextField fx:id="descripcionText" layoutX="188.0" layoutY="131.0" />
-                        <Button fx:id="guardarBtn" layoutX="443.0" layoutY="37.0" mnemonicParsing="false" onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0" style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa">
+                        <Label layoutX="64.0" layoutY="41.0" prefHeight="17.0" prefWidth="103.0" text="CÓDIGO"/>
+                        <Label layoutX="64.0" layoutY="86.0" prefHeight="17.0" prefWidth="103.0" text="NOMBRE"/>
+                        <Label layoutX="64.0" layoutY="135.0" prefHeight="17.0" prefWidth="103.0" text="DESCRIPCIÓN"/>
+                        <TextField fx:id="codigoText" layoutX="188.0" layoutY="37.0"/>
+                        <TextField fx:id="nombreText" layoutX="188.0" layoutY="82.0"/>
+                        <TextField fx:id="descripcionText" layoutX="188.0" layoutY="131.0"/>
+                        <Button fx:id="guardarBtn" layoutX="443.0" layoutY="37.0" mnemonicParsing="false"
+                                onAction="#onInsertarButtonClick" prefHeight="25.0" prefWidth="164.0"
+                                style="-fx-background-color: #148BD9;" text="GUARDAR" textFill="#fcfafa">
                             <font>
-                                <Font name="Arial Black" size="12.0" />
+                                <Font name="Arial Black" size="12.0"/>
                             </font>
                         </Button>
-                        <Button layoutX="443.0" layoutY="82.0" mnemonicParsing="false" onAction="#onLimpiarButtonClick" prefHeight="25.0" prefWidth="164.0" text="LIMPIAR" />
-                        <Button layoutX="443.0" layoutY="131.0" mnemonicParsing="false" onAction="#onSeleccionarButtonClick" prefHeight="25.0" prefWidth="164.0" text="EDITAR" />
-                        <Button layoutX="443.0" layoutY="175.0" mnemonicParsing="false" onAction="#eliminarButtonClick" prefHeight="25.0" prefWidth="164.0" text="ELIMINAR" />
-                        <ComboBox fx:id="categoriaBox" layoutX="188.0" layoutY="163.0" prefWidth="150.0" />
-                        <Label layoutX="56.0" layoutY="167.0" prefHeight="17.0" prefWidth="103.0" text="categoria" />
+                        <Button layoutX="443.0" layoutY="82.0" mnemonicParsing="false" onAction="#onLimpiarButtonClick"
+                                prefHeight="25.0" prefWidth="164.0" text="LIMPIAR"/>
+                        <Button layoutX="443.0" layoutY="131.0" mnemonicParsing="false"
+                                onAction="#onSeleccionarButtonClick" prefHeight="25.0" prefWidth="164.0" text="EDITAR"/>
+                        <Button layoutX="443.0" layoutY="175.0" mnemonicParsing="false" onAction="#eliminarButtonClick"
+                                prefHeight="25.0" prefWidth="164.0" text="ELIMINAR"/>
+                        <ComboBox fx:id="categoriaBox" layoutX="188.0" layoutY="163.0" prefWidth="150.0"/>
+                        <Label layoutX="56.0" layoutY="167.0" prefHeight="17.0" prefWidth="103.0" text="categoria"/>
+                        <Label layoutX="56.0" layoutY="14.0" prefHeight="17.0" prefWidth="103.0" text="PRECIO"/>
+                        <TextField fx:id="precioText" layoutX="188.0" layoutY="10.0"/>
                     </children>
                 </AnchorPane>
             </content>
         </TitledPane>
         <TableView fx:id="tablaproductos">
             <columns>
-                <TableColumn fx:id="colCodigoProducto" prefWidth="68.0" text="CÓDIGO" />
-                <TableColumn fx:id="colNombreProducto" prefWidth="111.0" text="NOMBRE" />
-                <TableColumn fx:id="colDescripcionProducto" prefWidth="134.0" text="DESCRIPCION" />
-                <TableColumn fx:id="colFechaCreacionProducto" prefWidth="170.0" text="FECHA CREACIÓN" />
-                <TableColumn fx:id="colCodigoCategoria" prefWidth="170.0" text="CODIGO CAT" />
-                <TableColumn fx:id="colNombreCategoria" prefWidth="170.0" text="CATEGORIA" />
+                <TableColumn fx:id="colCodigoProducto" prefWidth="68.0" text="CÓDIGO"/>
+                <TableColumn fx:id="colNombreProducto" prefWidth="111.0" text="NOMBRE"/>
+                <TableColumn fx:id="colDescripcionProducto" prefWidth="134.0" text="DESCRIPCION"/>
+                <TableColumn fx:id="colFechaCreacionProducto" prefWidth="170.0" text="FECHA CREACIÓN"/>
+                <TableColumn fx:id="colCodigoCategoria" prefWidth="170.0" text="CODIGO CAT"/>
+                <TableColumn fx:id="colNombreCategoria" prefWidth="170.0" text="CATEGORIA"/>
             </columns>
         </TableView>
-        <ComboBox prefWidth="150.0" />
+        <ComboBox prefWidth="150.0"/>
     </children>
 </VBox>
