--- a/POOG3/sistemaVentas/src/main/resources/com/example/sistemaventas/menu-view.fxml
+++ b/POOG3/sistemaVentas/src/main/resources/com/example/sistemaventas/menu-view.fxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistemaventas.controlador.MenuController">
     <left>
@@ -26,12 +24,17 @@
                         <Font size="16.0" />
                     </font>
                 </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#cliente" prefHeight="33.0" prefWidth="117.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Cliente" textFill="WHITE">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#prueba" prefHeight="33.0" prefWidth="117.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Prueba" textFill="WHITE">
+                <Button mnemonicParsing="false" onMouseClicked="#cliente" prefHeight="33.0" prefWidth="117.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Cliente" textFill="WHITE">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Button>
+                <Button mnemonicParsing="false" onMouseClicked="#venta" prefHeight="33.0" prefWidth="117.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Venta" textFill="WHITE">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Button>
+            <Button mnemonicParsing="false" onMouseClicked="#venta2" prefHeight="33.0" prefWidth="117.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Venta 2" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
@@ -43,6 +46,7 @@
         <AnchorPane fx:id="ap" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #0066CC;" BorderPane.alignment="CENTER">
             <children>
                 <Text layoutX="181.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Principal" wrappingWidth="115.10546875" />
-            </children></AnchorPane>
+            </children>
+        </AnchorPane>
     </center>
 </BorderPane>
